fix wrapping of division count in policy list

--- a/app/assets/stylesheets/policies/_policies-list.scss
+++ b/app/assets/stylesheets/policies/_policies-list.scss
@@ -2,4 +2,14 @@
   .policy-title {
     font-weight: normal;
   }
+
+  .policy-division-count {
+    margin-top: .5em;
+    display: block;
+
+    @media (min-width: $screen-md-min) {
+      margin-top: 0;
+      display: inline-block;
+    }
+  }
 }
